--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 jobs:
 
   # Lint stage
-
+  
   lint-frontend:
     name: Lint frontend
     runs-on: ubuntu-latest
@@ -28,7 +28,7 @@ jobs:
       
       - name: Lint
         run: make lint-frontend
-      
+
   lint-backend:
     name: Lint backend
     runs-on: ubuntu-latest
@@ -47,3 +47,123 @@ jobs:
 
       - name: Lint
         run: make lint-backend
+
+  # Build stage
+
+  build-frontend:
+    name: Build frontend
+    runs-on: ubuntu-latest
+    needs: [lint-frontend]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: 'src/frontend/package-lock.json'
+
+      - name: Install dependencies
+        working-directory: src/frontend
+        run: npm ci
+      
+      - name: Build
+        working-directory: src/frontend
+        run: npm run build
+
+  build-backend:
+    name: Build backend
+    runs-on: ubuntu-latest
+    needs: [lint-backend]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+
+      - name: Set up Python
+        run: uv python install 3.11
+
+      - name: Install dependencies
+        run: make install-backend
+      
+      - name: Build (smoke test)
+        working-directory: src/backend
+        run: uv run python main.py
+
+  # Test stage
+
+  test-frontend:
+    name: Test frontend
+    runs-on: ubuntu-latest
+    needs: [build-frontend]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: 'src/frontend/package-lock.json'
+
+      - name: Install dependencies
+        working-directory: src/frontend
+        run: npm ci
+      
+      - name: Test
+        run: make test-frontend
+
+  test-backend:
+    name: Test backend
+    runs-on: ubuntu-latest
+    needs: [build-backend]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+
+      - name: Set up Python
+        run: uv python install 3.11
+
+      - name: Install dependencies
+        run: make install-backend
+      
+      - name: Test
+        run: make test-backend
+
+  # Package stage
+
+  package-frontend:
+    name: Package frontend
+    runs-on: ubuntu-latest
+    needs: [test-frontend]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Build Docker image
+        run: make docker-build-frontend
+
+  package-backend:
+    name: Package backend
+    runs-on: ubuntu-latest
+    needs: [test-backend]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Build Docker image
+        run: make docker-build-backend
