--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -2,13 +2,15 @@
   "name": "robot-visual-perception-frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "lint": "echo 'Add ESLint when you add code'",
+    "lint": "eslint src/",
     "build": "mkdir -p dist && cp -r src/* dist/",
     "test": "vitest run"
   },
   "devDependencies": {
     "vitest": "2.1.5",
-    "prettier": "3.4.2"
+    "prettier": "3.4.2",
+    "eslint": "9.17.0"
   }
 }
