--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -4,13 +4,26 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "lint": "eslint src/",
-    "build": "mkdir -p dist && cp -r src/* dist/",
     "test": "vitest run"
   },
+  "dependencies": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  },
   "devDependencies": {
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "@vitejs/plugin-react": "4.3.4",
+    "typescript": "5.6.3",
+    "vite": "6.0.3",
     "vitest": "2.1.5",
     "prettier": "3.4.2",
-    "eslint": "9.17.0"
+    "eslint": "9.17.0",
+    "@typescript-eslint/eslint-plugin": "8.16.0",
+    "@typescript-eslint/parser": "8.16.0"
   }
 }
