--- a/src/backend/mypy.ini
+++ b/src/backend/mypy.ini
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 2025 robot-visual-perception
+#
+# SPDX-License-Identifier: MIT
+
 [mypy]
 python_version = 3.11
 exclude = (tests/|\.venv/)
