--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 2025 robot-visual-perception
+#
+# SPDX-License-Identifier: MIT
+
 FROM node:20-alpine AS builder
 WORKDIR /app
 COPY package*.json ./
