--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,17 +19,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       
-      - name: Install uv
-        uses: astral-sh/setup-uv@v3
-
-      - name: Set up Python
-        run: uv python install 3.11
-
-      - name: Install dependencies
-        run: make install-backend
-
-      - name: Lint licensing
-        run: make lint-licensing
+      - name: REUSE Compliance Check
+        uses: fsfe/reuse-action@v4
   
   lint-frontend:
     name: Lint frontend
