--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -4,7 +4,8 @@
 fastapi==0.115.10
 aiortc==1.14.0
 av==16.0.1
-opencv-python==4.12.0.88
 pydantic==2.12.3
 uvicorn==0.38.0
-numpy==2.2.6
+opencv-python==4.9.0.80
+numpy==1.26.4
+ultralytics==8.3.58
