--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,11 +104,11 @@ jobs:
       - name: Install dependencies
         run: make install-backend
       
-      # use py_compile instead of running main.py
-      # because main.py contains a web server that runs forever
-      - name: Build (syntax check)
+      - name: Build (import check)
         working-directory: src/backend
-        run: uv run python -m py_compile main.py
+        run: |
+          uv run python -c "import webcam.main"
+          uv run python -c "import analyzer.main"
 
   # Test stage
 
