--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -7,6 +7,10 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 COPY . .
+
+ARG VITE_BACKEND_URL=http://host.docker.internal:8001
+ENV VITE_BACKEND_URL=$VITE_BACKEND_URL
+
 RUN npm run build
 
 FROM nginx:1.27-alpine
