--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,16 +154,49 @@ jobs:
       - name: Test
         run: make test-backend
 
+  # SBOM validation stage
+
+  sbom-validation:
+    name: Verify SBOM artifacts
+    runs-on: ubuntu-latest
+    needs: [test-frontend, test-backend]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+
+      - name: Set up Python
+        run: uv python install 3.11
+
+      - name: Check SBOM freshness
+        run: make sbom-check
+
+      - name: Generate SBOM
+        run: make sbom
+
+      - name: Ensure SBOM files committed
+        run: git diff --exit-code -- sbom.json sbom-dependencies.csv
+
+      - name: Upload SBOM artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: sbom
+          path: |
+            sbom.json
+            sbom-dependencies.csv
+
   # Package stage
 
   package-frontend:
     name: Package frontend
     runs-on: ubuntu-latest
-    needs: [test-frontend]
+    needs: [test-frontend, sbom-validation]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
@@ -173,11 +206,11 @@ jobs:
   package-backend:
     name: Package backend
     runs-on: ubuntu-latest
-    needs: [test-backend]
+    needs: [test-backend, sbom-validation]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
