--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -170,6 +170,9 @@ jobs:
       - name: Set up Python
         run: uv python install 3.11
 
+      - name: Generate SBOM
+        run: make sbom
+
       - name: Check SBOM freshness
         run: make sbom-check
 
