--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,7 +203,7 @@ jobs:
         run: sed -i '/devices:/,+1d' docker-compose.yml
       
       - name: Start services
-        run: docker-compose up -d && sleep 15
+        run: docker compose up -d && sleep 15
       
       - name: Test health endpoints
         run: |
@@ -212,8 +212,9 @@ jobs:
           curl -f http://localhost:8080
       
       - name: Test service connectivity
-        run: docker-compose exec -T analyzer curl -f http://webcam:8000/health
+        # Use Python instead of curl since analyzer container doesn't have curl installed
+        run: docker compose exec -T analyzer python -c "import urllib.request; urllib.request.urlopen('http://webcam:8000/health')"
       
       - name: Cleanup
         if: always()
-        run: docker-compose down
+        run: docker compose down
