--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,49 +154,16 @@ jobs:
       - name: Test
         run: make test-backend
 
-  # SBOM validation stage
-
-  sbom-validation:
-    name: Verify SBOM artifacts
-    runs-on: ubuntu-latest
-    needs: [test-frontend, test-backend]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v3
-
-      - name: Set up Python
-        run: uv python install 3.11
-
-      - name: Generate SBOM
-        run: make sbom
-
-      - name: Check SBOM freshness
-        run: make sbom-check
-
-      - name: Ensure SBOM files committed
-        run: git diff --exit-code -- sbom.json sbom-dependencies.csv
-
-      - name: Upload SBOM artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: sbom
-          path: |
-            sbom.json
-            sbom-dependencies.csv
-
   # Package stage
 
   package-frontend:
     name: Package frontend
     runs-on: ubuntu-latest
-    needs: [test-frontend, sbom-validation]
+    needs: [test-frontend]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
@@ -206,11 +173,11 @@ jobs:
   package-backend:
     name: Package backend
     runs-on: ubuntu-latest
-    needs: [test-backend, sbom-validation]
+    needs: [test-backend]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
