--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -17,16 +17,13 @@
   "devDependencies": {
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
-    "@typescript-eslint/eslint-plugin": "8.16.0",
-    "@typescript-eslint/parser": "8.16.0",
     "@vitejs/plugin-react": "4.3.4",
-    "autoprefixer": "^10.4.22",
-    "eslint": "9.17.0",
-    "postcss": "^8.5.6",
-    "prettier": "3.4.2",
-    "tailwindcss": "^3.4.16",
     "typescript": "5.6.3",
     "vite": "6.0.3",
-    "vitest": "2.1.5"
+    "vitest": "2.1.5",
+    "prettier": "3.4.2",
+    "eslint": "9.17.0",
+    "@typescript-eslint/eslint-plugin": "8.16.0",
+    "@typescript-eslint/parser": "8.16.0"
   }
 }
