--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -12,6 +12,7 @@ numpy==1.26.4
 ultralytics==8.3.58
 timm==1.0.22
 httpx==0.27.2
+websockets==15.0.1
 onnxruntime==1.20.1
 onnxruntime-gpu==1.23.2
 onnx==1.19.1
