Moving to pyproject.toml
Signed-off-by: anuunchin <anuun.ch@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
 
   analyzer:
     build:
+      args:
+        - ONNX_RUNTIME=onnx-cpu
       context: ./src/backend
       dockerfile: Dockerfile.analyzer
     image: robot-analyzer:latest
