--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
     branches: [main] #  # PRs to main
 jobs:
 
-  # Lint stage
+  # Lint and format stage
 
   lint-licensing:
     name: Lint licensing (REUSE)
@@ -42,6 +42,9 @@ jobs:
       
       - name: Lint
         run: make lint-frontend
+      
+      - name: Check formatting
+        run: make format-check-frontend
 
   lint-backend:
     name: Lint backend
@@ -61,6 +64,9 @@ jobs:
 
       - name: Lint
         run: make lint-backend
+      
+      - name: Check formatting
+        run: make format-check-backend
 
   # Build stage
 
