feat(performance): WIP

--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
     # CV & ML (shared by both webcam and analyzer)
     "opencv-python==4.9.0.80",
     "numpy==1.26.4",
+
+    "onnxruntime-webgpu",
+    "onnxruntime-rocm",
 ]
 
 [project.optional-dependencies]
