--- a/src/backend/Dockerfile.streamer
+++ b/src/backend/Dockerfile.streamer
@@ -18,10 +18,10 @@ COPY pyproject.toml uv.lock ./
 RUN uv sync --frozen --no-dev
     
 COPY common/ ./common/
-COPY file/ ./file/
+COPY streamer/ ./streamer/
 COPY models/ ./models/
 
 EXPOSE 8000
 
-CMD ["uv", "run", "uvicorn", "file.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uv", "run", "uvicorn", "streamer.main:app", "--host", "0.0.0.0", "--port", "8000"]
 
