--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,7 +113,7 @@ jobs:
       - name: Build (import check)
         working-directory: src/backend
         run: |
-          uv run python -c "import webcam.main"
+          uv run python -c "import streamer.main"
           uv run python -c "import analyzer.main"
 
   # Test stage
@@ -219,7 +219,7 @@ jobs:
       
       - name: Test service connectivity
         # Use Python instead of curl since analyzer container doesn't have curl installed
-        run: docker compose exec -T analyzer python -c "import urllib.request; urllib.request.urlopen('http://webcam:8000/health')"
+        run: docker compose exec -T analyzer python -c "import urllib.request; urllib.request.urlopen('http://streamer:8000/health')"
       
       - name: Cleanup
         if: always()
