map detection labels to text
Signed-off-by: Zohreh Asadi <z.asadi@campus.tu-berlin.de>

--- a/src/backend/analyzer/asyncapi.yaml
+++ b/src/backend/analyzer/asyncapi.yaml
@@ -85,7 +85,8 @@ components:
             height:
               type: number
         label:
-          type: integer
+          type: string
+          description: Human-readable object class label
         confidence:
           type: number
         distance:
