--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "websockets==15.0.1",
     "uvicorn==0.38.0",
     "pydantic==2.12.3",
+
+    # Observability
     "opentelemetry-sdk==1.27.0",
     "opentelemetry-exporter-otlp==1.27.0",
     "opentelemetry-semantic-conventions==0.48b0",
