feat: update label mapping to include class ID and human-readable text
Signed-off-by: Zohreh Asadi <z.asadi@campus.tu-berlin.de>

--- a/src/backend/analyzer/asyncapi.yaml
+++ b/src/backend/analyzer/asyncapi.yaml
@@ -85,6 +85,9 @@ components:
             height:
               type: number
         label:
+          type: integer
+          description: Detector class ID (e.g., COCO class index)
+        label_text:
           type: string
           description: Human-readable object class label
         confidence:
