integrate Apple ML Depth Pro backend with automated model downloading support
Signed-off-by: sarib <saribstudent@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ src/backend/models/*
 src/backend/models/*.pt
 src/backend/models/*.onnx
 src/backend/models/midas_cache/
+src/backend/checkpoints/
