add git to Docker image for depth_pro dependency installation
Signed-off-by: sarib <saribstudent@gmail.com>

--- a/src/backend/Dockerfile.analyzer
+++ b/src/backend/Dockerfile.analyzer
@@ -9,10 +9,11 @@ WORKDIR /app
 
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
 
-# Install system dependencies for opencv
+# Install system dependencies for opencv and git for depth_pro
 RUN apt-get update && apt-get install -y \
     libgl1 \
     libglib2.0-0 \
+    git \
     && rm -rf /var/lib/apt/lists/*
 
 COPY pyproject.toml uv.lock ./
