Add mypy overrides for untyped package imports
Signed-off-by: Zohreh Asadi <z.asadi@campus.tu-berlin.de>

--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -82,3 +82,6 @@ exclude = [
 
 [tool.mypy]
 exclude = ["models"]
+[[tool.mypy.overrides]]
+module = ["untyped_package.*"]
+follow_untyped_imports = true
